added uuid gen + token manager + updated crud
