# internal/api/handler/handler.go
@@ -24,17 +24,17 @@ func (h *Handler) InitRoutes() *gin.Engine {
 		reviews.POST("/:id", h.CreateReviewForEvent)
 	}
 
-	event := router.Group("/event")
+	event := router.Group("/events")
 	{
-		event.POST("/", h.CreateEventHandler)
+		event.POST("", h.CreateEventHandler)
 		event.GET("/:id", h.GetEventById)
 		event.GET("/:id/participants", h.GetEventParticipants)
 		event.DELETE("/:id", h.DeleteEventById)
 		event.PUT("/:id", h.UpdateEvent)
-		event.GET("/all", h.GetAllEvents)
+		event.GET("", h.GetAllEvents)
 	}
 
-	user := router.Group("/user")
+	user := router.Group("/users")
 	{
 		user.GET("/:id/events", h.GetEventsForUser)
 		user.GET("/:id", h.GetUserByID)
